Aggregation pipeline and replica set config. done
